--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "express-session": "^1.18.1",
     "glob": "^11.0.1",
     "inflight": "^1.0.6",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
